--- a/chatterbox.html
+++ b/chatterbox.html
@@ -29,7 +29,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="dist/css/styles_version2.2.css"
+      href="dist/css/styles_version2.3.css"
     />
   </head>
 
@@ -50,13 +50,9 @@
               width=""
             />
           </a>
-          <a href="index.html" role="menuitem" target="_self">Home</a>
-          <a href="about.html" role="menuitem" target="_self">About Crue</a>
-          <a href="work.html" role="menuitem" target="_self">Crue's Projects</a>
-          <a href="contact.html" role="menuitem" target="_self">Contact Crue</a>
-          <a href="work.html" role="menuitem" target="_self" class="active"
-            >Back to Projects
-          </a>
+          <a href="contact.html" role="menuitem" target="_self">Contact Me</a>
+          <a href="work.html" role="menuitem" target="_self">My Projects</a>
+          <a href="about.html" role="menuitem" target="_self">About Me</a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
           </a>
@@ -68,7 +64,7 @@
     <div class="project-content">
       <main class="project-container">
         <h1 class="secondary-title">
-          Chatter-<span class="crue-span">Box</span>
+          <span class="crue-span">Chatter</span>-Box
         </h1>
         <h2 class="tech-label">
           React-Native
@@ -104,20 +100,18 @@
 
         <div class="grid-1">
           <div class="grid-1__item">
-            <h2 class="project-title-left">
-              The Challenge
-            </h2>
+            <h2 class="project-title-left">The Challenge</h2>
             <p class="proj-desc-left">
-              Let's say you are a person who likes to travel and share picutres
-              and locations with your friends and family. You want an
-              application that you can customize and send, take, and view new
-              photos anywhere you go!You trael all over the world and some of
-              the places life takes you don't have the best wifi! A friend you
-              know in a village sent you directions, but you don't have a signal
-              anywhere! Chatter-Box is here to lend a hand at this problem by
-              providing a platform to share events and locations with friends
-              and family, and have access to your messages offline. For when
-              your adventures take you a little further off grid!
+              Let's say you are a person who loves to travel and share your
+              adventures with family and friends. You want an application that
+              allows you to send, take, and receive photos and GPS locations
+              wherever you go! Perhaps throughout your travels, you find
+              yourself in a region with spotty service. A friend you know in a
+              village sent you directions, but you don't have a signal anywhere!
+              Chatter-Box is here to lend a hand at this problem by providing a
+              platform for sharing adventures with friends and family, all while
+              providing access to your messages offline. For when your
+              adventures take you a little further off-grid!
             </p>
           </div>
           <div class="grid-1_img__item">
@@ -138,43 +132,36 @@
             />
           </div>
           <div class="grid-2__item">
-            <h2 class="project-title-left">
-              Tech Stack Explanation
-            </h2>
+            <h2 class="project-title-left">Tech Stack Explanation</h2>
             <p class="proj-desc-left">
               I chose to use React-Native to complete this project because it
               was the ideal tool to create a hand-held chat application that you
-              could use on the go, and offline. I incorporated Expo into the
-              project because of the access to its wide variety of built-in
-              APIs. React-Navigation helps build the content of the pages, and
+              could use on the go and offline. I incorporated Expo into the
+              project to access its wide variety of built-in APIs. The use of
+              React-Navigation helps build the content of the pages, and
               Firestore is the backbone of the project, storing and sending user
-              messages real-time.
+              messages in real-time.
             </p>
           </div>
         </div>
 
         <div class="grid-1">
           <div class="grid-1__item">
-            <h2 class="project-title-left">
-              The Process
-            </h2>
+            <h2 class="project-title-left">The Process</h2>
             <p class="proj-desc-left">
-              Chatter-Box was built up with an emphasis on collaboration, and
-              referencing project assets was of vital importance. The goal was
-              to bring the "client" a product as close to their visual design as
-              possible. Throughout the development process both wireframes and
-              user stories drove the creation of this React-Native chat app.
-              Thorough testing and a major focus on detailed documentation
-              helped further increase the collaborative feel and goals of this
-              project. As the setup for this project was quite detailed and
-              complex, a highly detailed README.md was created along with
-              documentation created with JSDocs.
+              Chatter-Box was built with an emphasis on collaboration, and
+              referring to project assets was of vital importance. The goal was
+              to provide the client with a product as close to the original
+              visual design as possible. Wireframes, user stories, and project
+              assets drove the creation of this React-Native chat app. As the
+              setup for this project was quite detailed and complex, highly
+              detailed documentation and a README.md were created.
             </p>
           </div>
           <div class="grid-1_img__item">
             <img
               style="width: 100%;"
-              src="img/chat-comp3.png"
+              src="img/chat-comp.png"
               alt="chat wireframes"
             />
           </div>
@@ -184,7 +171,7 @@
           <div class="single-grid__img">
             <img
               style="width: 100%; margin-top: 0.5rem;"
-              src="img/chat-group.svg"
+              src="img/chat-group.png"
             />
           </div>
         </div>
@@ -199,19 +186,17 @@
           </div>
 
           <div class="grid-2__item">
-            <h2 class="project-title-left">
-              Lessons Learned
-            </h2>
+            <h2 class="project-title-left">Lessons Learned</h2>
             <p class="proj-desc-left">
-              This project was a long lesson in patience and determination.
-              Initially I began this project thinking that it would be a very
-              simple task to accomplish in a short period of time. Rushing is
-              never a solution to any situation, no matter how dire. I learned
-              that when you rush, you sacrifice quality, and quality will beat
-              out quantity when it comes to user experience every day of the
-              week. Learning how to navigate the seemingly daily changing world
-              of React-Native was a task well worth taking on considering all
-              the lessons learned.
+              This project was a fantastic lesson in patience and determination.
+              When I began developing Chatter-Box, I was initially under the
+              impression that it would be a very simple task to accomplish
+              rapidly. I quickly found that rushing is never a solution in any
+              situation. I found that when you rush, you sacrifice quality, and
+              quality will win over quantity when it comes to user experience
+              every day of the week. Learning how to navigate the world of
+              React-Native was a task well worth taking on considering all the
+              lessons learned.
             </p>
           </div>
         </div>
@@ -235,6 +220,9 @@
           /></a>
           <a href="https://www.instagram.com/cruebeedoobie/" target="_blank"
             ><img src="img/instagram_icon.svg" alt="Instagram"
+          /></a>
+          <a href="https://www.medium.com/@ericcjameson" target="_blank"
+            ><img src="img/medium_icon.svg" alt="medium.com"
           /></a>
         </div>
       </footer>
