--- a/cruebeeflix.html
+++ b/cruebeeflix.html
@@ -29,7 +29,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="dist/css/styles_version2.2.css"
+      href="dist/css/styles_version2.3.css"
     />
   </head>
 
@@ -50,13 +50,9 @@
               width=""
             />
           </a>
-          <a href="index.html" role="menuitem" target="_self">Home</a>
-          <a href="about.html" role="menuitem" target="_self">About Crue</a>
-          <a href="work.html" role="menuitem" target="_self">Crue's Projects</a>
-          <a href="contact.html" role="menuitem" target="_self">Contact Crue</a>
-          <a href="work.html" role="menuitem" target="_self" class="active"
-            >Back to Projects
-          </a>
+          <a href="contact.html" role="menuitem" target="_self">Contact Me</a>
+          <a href="work.html" role="menuitem" target="_self">My Projects</a>
+          <a href="about.html" role="menuitem" target="_self">About Me</a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
           </a>
@@ -67,7 +63,7 @@
 
     <div class="project-content">
       <main class="project-container">
-        <h1 class="secondary-title">my<span class="crue-span">Flix</span></h1>
+        <h1 class="secondary-title"><span class="crue-span">my</span>Flix</h1>
         <h2 class="tech-label">
           MongoDB
           <span class="tech-span">|</span> Express
@@ -125,12 +121,14 @@
               The Challenge
             </h2>
             <p class="proj-desc-left">
-              The myFlix web application was created for movie buffs! myFlix is
-              a scalable web application that provides users with a place to
-              login and browse a selection of movies. Users can add movies to a
-              favorites list, remove movies from the list they don't like, link
-              to director pages, with information about the directors of their
-              favorite movies.
+              The myFlix web application is a highly scalable single page
+              application designed for movie lovers. This React project provides
+              the user with an opportunity to create an account, and then log in
+              and browse a selection of movies. While looking through movies,
+              users can add titles to a list of favorites and remove them from
+              that list at any time. The myFlix app also provides users with a
+              secure login process and a well protected back end database that
+              hashes all sensitive data provided by a user.
             </p>
           </div>
           <div class="grid-1_img__item">
@@ -160,16 +158,13 @@
               Tech Stack Explanation
             </h2>
             <p class="proj-desc-left">
-              I chose React due to the user interaction that this application
-              was going to need to handle. Users were going to be clicking and
-              changing views, inputs, and user data, so React was the obvious
-              choice here. With the help of Parcel, Node.js, Express, and
-              MongoDB, React was the most capable, while offering up a lot of
-              freedom. The MERN stack offers a powerful method for setting up
-              front-to-back end projects in a relatively short period of time.
-              React's modular nature with its components make it easy to reuse
-              components and features which saves time, and makes it highly
-              scalable.
+              When considering a method for developing myFlix, React was an easy
+              choice. React's modular components and flexibility made it easier
+              to reuse components and features throughout the application. In
+              conjunction with Parcel, Node.js, Express, and MongoDB, React
+              provides some advanced features. Overall, the MERN stack offered
+              up a powerful method for setting up this full front-to-back end
+              project in a relatively short timeframe.
             </p>
           </div>
         </div>
@@ -180,14 +175,15 @@
               The Process
             </h2>
             <p class="proj-desc-left">
-              Creating the myFlix application was an enjoyable experience. User
-              stories are converted into sketched wireframes, and are based on
-              project assets provided. These wireframes act as a guide where
-              coding concepts are visualized before being implemented.
-              Visualizing a requirement of an application provides a better
-              understanding of the process required to implement features.
-              Wireframes also provide a great way to flesh out any desired user
-              experience (UX) features and their functionality.
+              Designing and developing the myFlix application was an enjoyable
+              experience. I first took user stories and converted them into
+              sketched wireframes. These wireframes acted as a guide for
+              visualizing coding concepts before implementing them. I believe
+              that visualizing the needs of an application provides a better
+              understanding of the process required to implement necessary
+              features. Wireframes also provide a great way to flesh out any
+              desired (or undesired) user experience (UX) features and
+              functionality.
             </p>
           </div>
           <div class="grid-1_img__item">
@@ -203,7 +199,7 @@
           <div class="single-grid__img">
             <img
               style="width: 100%; margin-top: 0.5rem;"
-              src="img/flix-group.svg"
+              src="img/flix-group.png"
             />
           </div>
         </div>
@@ -222,13 +218,13 @@
             </h2>
             <p class="proj-desc-left">
               I learned a lot about both backend and frontend programming while
-              creating myFlix. I enjoy the structured nature of both SQL and
-              NoSQL databases and really grew to appreciate the importance of
-              good API documentation. Even when a project is using its own
-              backend to feed the project it is always important to remember you
-              won't be the last and only person to work on a project, so knowing
-              what your endpoints do, and expect when they get requests was a
-              vital lesson for this project.
+              creating myFlix. I enjoyed the structured nature of both SQL and
+              NoSQL databases and grew to appreciate the importance of good API
+              documentation. Even when a project uses a backend developed by the
+              same creator, it's always important to remember you won't be the
+              last and only person to work on a project. Knowing what a
+              project's endpoints do, and knowing what they expect when a user
+              sends a request was a vital portion of this project.
             </p>
           </div>
         </div>
@@ -252,6 +248,9 @@
           /></a>
           <a href="https://www.instagram.com/cruebeedoobie/" target="_blank"
             ><img src="img/instagram_icon.svg" alt="Instagram"
+          /></a>
+          <a href="https://www.medium.com/@ericcjameson" target="_blank"
+            ><img src="img/medium_icon.svg" alt="medium.com"
           /></a>
         </div>
       </footer>
