--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, height=device-height, initial-scale=1"
     />
-    <title>Crue Jameson</title>
+    <title>Crue Jameson - Portfolio</title>
     <!-- Is the following code the most effective way to add in a favicon downloaded from the internet? -->
     <link
       rel="icon"
@@ -34,7 +34,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="dist/css/styles_version2.2.css"
+      href="dist/css/styles_version2.3.css"
     />
   </head>
 
@@ -55,13 +55,9 @@
               width=""
             />
           </a>
-          <a href="index.html" role="menuitem" target="_self" class="active"
-            >Home
-          </a>
-          <a href="about.html" role="menuitem" target="_self">About Crue</a>
-          <a href="work.html" role="menuitem" target="_self">Crue's Projects</a>
-          <a href="contact.html" role="menuitem" target="_self">Contact Crue</a>
-
+          <a href="contact.html" role="menuitem" target="_self">Contact Me</a>
+          <a href="work.html" role="menuitem" target="_self">My Projects</a>
+          <a href="about.html" role="menuitem" target="_self">About Me</a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
           </a>
@@ -72,11 +68,7 @@
 
     <div class="main-content">
       <div class="main-title">
-        <h1 class="crue-title">
-          <!-- The extra < before the <span></span> tags is intentional by design
-            I want this displayed as "text" on the page, so it reads: <Crue Jameson /> -->
-          <span class="crue-span">Crue</span> Jameson
-        </h1>
+        <h1 class="crue-title"><span class="crue-span">Crue</span> Jameson</h1>
         <h2 class="subtitle-crue">
           <span class="crue-span">Web</span> Developer, home-grown in
           <span class="crue-span">Colorado</span>
@@ -101,6 +93,9 @@
               /></a>
               <a href="https://www.instagram.com/cruebeedoobie/" target="_blank"
                 ><img src="img/instagram_icon.svg" alt="Instagram"
+              /></a>
+              <a href="https://www.medium.com/@ericcjameson" target="_blank"
+                ><img src="img/medium_icon.svg" alt="medium.com"
               /></a>
             </div>
           </footer>
