--- a/memberberry.html
+++ b/memberberry.html
@@ -29,7 +29,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="dist/css/styles_version2.2.css"
+      href="dist/css/styles_version2.3.css"
     />
   </head>
 
@@ -50,7 +50,6 @@
               width=""
             />
           </a>
-          <a href="index.html" role="menuitem" target="_self">Home</a>
           <a href="about.html" role="menuitem" target="_self">About Crue</a>
           <a href="work.html" role="menuitem" target="_self">Crue's Projects</a>
           <a href="contact.html" role="menuitem" target="_self">Contact Crue</a>
@@ -143,6 +142,9 @@
           /></a>
           <a href="https://www.instagram.com/cruebeedoobie/" target="_blank"
             ><img src="img/instagram_icon.svg" alt="Instagram"
+          /></a>
+          <a href="https://www.medium.com/@ericcjameson" target="_blank"
+            ><img src="img/medium_icon.svg" alt="medium.com"
           /></a>
         </div>
       </footer>
