--- a/poke-tracker.html
+++ b/poke-tracker.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Pokedex | Cruebee</title>
+    <title>Poke-dex | Cruebee</title>
     <link
       rel="icon"
       type="image/png"
@@ -29,7 +29,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="dist/css/styles_version2.2.css"
+      href="dist/css/styles_version2.3.css"
     />
   </head>
 
@@ -50,13 +50,9 @@
               width=""
             />
           </a>
-          <a href="index.html" role="menuitem" target="_self">Home</a>
-          <a href="about.html" role="menuitem" target="_self">About Crue</a>
-          <a href="work.html" role="menuitem" target="_self">Crue's Projects</a>
-          <a href="contact.html" role="menuitem" target="_self">Contact Crue</a>
-          <a href="work.html" role="menuitem" target="_self" class="active"
-            >Back to Projects
-          </a>
+          <a href="contact.html" role="menuitem" target="_self">Contact Me</a>
+          <a href="work.html" role="menuitem" target="_self">My Projects</a>
+          <a href="about.html" role="menuitem" target="_self">About Me</a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
           </a>
@@ -67,7 +63,7 @@
 
     <div class="project-content">
       <main class="project-container">
-        <h1 class="secondary-title">Poke-<span class="crue-span">dex</span></h1>
+        <h1 class="secondary-title"><span class="crue-span">Poke</span>-Dex</h1>
         <h2 class="tech-label">
           HTML
           <span class="tech-span">|</span> CSS
@@ -102,11 +98,12 @@
               The Challenge
             </h2>
             <p class="proj-desc-left">
-              Poke-Dex was designed as a learning project so I could learn the
-              ins and outs of JavaScript, and DOM interaction. The project also
-              served as an introduction to libraries and honed some HTML and CSS
-              skills at the same time. This project was a stepping stone to
-              begin working on larger projects with more functionality.
+              Poke-Dex was a learning project designed to explore the ins and
+              outs of JavaScript and DOM interaction. The project also served as
+              an introduction to libraries and honed some HTML and CSS skills at
+              the same time. This project was a stepping stone to begin working
+              on larger projects with more functionality and more advanced
+              concepts and features.
             </p>
           </div>
           <div class="grid-1_img__item">
@@ -127,12 +124,13 @@
               Tech Stack Explanation
             </h2>
             <p class="proj-desc-left">
-              HTML, CSS, and JavaScript, along with jQuery and libraries are the
-              backbone and foundation of most of modern web development. So what
-              better way to incorporate some of the most fundemental elements of
-              web development into a single project. Using minimal external
-              libraries gives the site a fast load time, and good response times
-              despite a large JavaScript file.
+              HTML, CSS, JavaScript, along with jQuery and other third-party
+              libraries are the backbone and foundation of most modern web
+              development. So developing the Poke-Dex app was a fantastic way to
+              incorporate some of the most fundamental elements of web
+              development into a single project. Using minimal external
+              libraries gives the site fast load times and responsive
+              interactions despite a large JavaScript file.
             </p>
           </div>
         </div>
@@ -143,18 +141,18 @@
               The Process
             </h2>
             <p class="proj-desc-left">
-              This web application was first visualized through user stories.
-              These user stories were then turned into sketched wireframes,
-              which provide a more concrete visual concept for the final
-              product. Once the wireframes are in place, programming begins, and
-              each added element and function are tested multiple times before
-              production.
+              The Poke-Dex app was first visualized through user stories. The
+              user stories get converted into sketched wireframes, which
+              provided a more concrete visual concept for the final product.
+              Once wireframes are completed, programming begins, and each
+              element and function are tested multiple times before being put
+              into production.
             </p>
           </div>
           <div class="grid-1_img__item">
             <img
               style="width: 100%; max-height: 400px;"
-              src="img/pokedex-wire.jpeg"
+              src="img/pokedex-wire.png"
               alt="poke-wireframes"
             />
           </div>
@@ -182,12 +180,12 @@
               Lessons Learned
             </h2>
             <p class="proj-desc-left">
-              This project taught me a lot about patience, and API interaction.
-              Before this task was set upon me, I only had a tenuous grasp of
-              HTML, CSS, and JavaScript. I didn't know the first thing about
-              making calls to APIs or how to iterate over data pulled from them.
-              All the same this simple project paved the pathway leading to more
-              advanced concepts and future projects that are far more exciting!
+              This project taught me a lot about patience and API interaction.
+              Before I began this task, I only had a tenuous grasp of HTML, CSS,
+              and JavaScript. I didn't know the first thing about making calls
+              to APIs or how to iterate over data pulled from them. All the
+              same, this simple project paved a path leading to more advanced
+              concepts and far more exciting future projects.
             </p>
           </div>
         </div>
@@ -211,6 +209,9 @@
           /></a>
           <a href="https://www.instagram.com/cruebeedoobie/" target="_blank"
             ><img src="img/instagram_icon.svg" alt="Instagram"
+          /></a>
+          <a href="https://www.medium.com/@ericcjameson" target="_blank"
+            ><img src="img/medium_icon.svg" alt="medium.com"
           /></a>
         </div>
       </footer>
