--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Crue's Projects</title>
+    <title>My Projects</title>
     <!-- Is the following code the most effective way to add in a favicon downloaded from the internet? -->
     <link
       rel="icon"
@@ -30,7 +30,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="dist/css/styles_version2.2.css"
+      href="dist/css/styles_version2.3.css"
     /> 
   </head>
 
@@ -51,12 +51,11 @@
               width=""
             />
           </a>
-          <a href="index.html" role="menuitem" target="_self">Home</a>
-          <a href="about.html" role="menuitem" target="_self">About Crue</a>
+          <a href="contact.html" role="menuitem" target="_self">Contact Me</a>
           <a href="work.html" role="menuitem" target="_self" class="active"
-            >Crue's Projects
-          </a>
-          <a href="contact.html" role="menuitem" target="_self">Contact Crue</a>
+          >My Projects
+        </a>
+          <a href="about.html" role="menuitem" target="_self">About Me</a>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
           </a>
@@ -69,20 +68,16 @@
       <section class="project-container">
 
         <h1 class="secondary-title">
-          My <span class="crue-span">Projects</span>
+          <span class="crue-span">My</span> Projects
         </h1>
 
         <div class="grid-1">
           <div class="grid-1__item">
             <h2 class="project-title-left">
-              my<span class="crue-span">Flix</span>
+              <span class="crue-span">my</span>Flix
             </h2>
             <p class="proj-desc-left">
-              My first full front-to-back web application created with React. This one
-              is for the movie lovers out there. Here users can create profiles,
-              view a list of movies with details about the movies, their
-              directors, and genres and more! Created with React this application is
-              highly scalable and flexible.
+              This project is my first full front-to-back web application and was created with React. This single page application was developed with movie lovers in mind. Here users can create profiles, view a list of movies with details about each one including, their directors, genres, and more! With the help of React, this application is highly scalable and flexible.
             </p>
             <a class="button projects" href="cruebeeflix.html">View Project</a>
           </div>
@@ -97,13 +92,10 @@
           </div>
           <div class="grid-2__item">
             <h2 class="project-title-left">
-              Chatter<span class="crue-span">Box</span>
+              <span class="crue-span">Chatter</span>-Box
             </h2>
             <p class="proj-desc-left">
-              ChatterBox is a React Native project exploring the process of
-              creating and implementing code for both iPhone, and Android users
-              at the same time! This advanced application proved to be both
-              difficult and highly rewarding.
+              ChatterBox is a React Native project exploring the process of creating and implementing code for both iPhone, and Android users at the same time. I was excited to design an app that allowed users to customize the look and feel of the chat room. The features developed for this advanced native application proved to be a difficult and highly rewarding challenge.
             </p>
             <a class="button projects" href="chatterbox.html">View Project</a>
           </div>
@@ -112,15 +104,10 @@
         <div class="grid-1">
           <div class="grid__item">
             <h2 class="project-title-left">
-              Meet-<span class="crue-span">Em</span>-Up
+              <span class="crue-span">Meet</span>-Em-Up
             </h2>
             <p class="proj-desc-left">
-              Meet-Em-Up is a progressive web application built for the modern age!
-              In today's uncertain times, connecting with people is more important than
-              ever! Even though this rampant virus and political pressures are forcing more
-              and more of us to distance ourselves from others. Meet-Em-Up hopes to solve
-              this problem by connecting people with digital meetups being organized in
-              a user's area!
+              Meet-Em-Up is a progressive web application built for the modern age. In today's uncertain times, connecting with people is more important than ever. With a rampant virus and political pressures forcing more and more of us to distance ourselves. Meet-Em-Up hopes to solve this problem by connecting people through digital meetups being organized in a user's area.
             </p>
             <a class="button projects" href="meetemup.html">View Project</a>
           </div>
@@ -135,13 +122,10 @@
           </div>
           <div class="grid-2__item">
             <h2 class="project-title-left">
-              Poke-<span class="crue-span">Dex</span>
+              <span class="crue-span">Poke</span>-Dex
             </h2>
             <p class="proj-desc-left">
-              This application is all about HTML5, CSS, jQuery, and JavaScript.
-              The styling for this app was created with the help Bootstrap, and
-              interacts with the Pokemon API. This project took a deep dive into
-              advanced JavaScript methods.
+              This application is all about HTML5, CSS, jQuery, and JavaScript. The styling for this app was created with help from Bootstrap and interacts with the Pokemon API. The development of Poke-Dex took a deep dive into advanced JavaScript methods and DOM interaction.
             </p>
             <a class="button projects" href="poke-tracker.html">View Project</a>
           </div>
@@ -153,28 +137,25 @@
 
     <div class="foot-wrap">
       <footer class="page-footer">
-        <div class="cv-container">
-          <a href="files/resume.pdf" class="button" download target="_blank">
-            Download My Resume
-          </a>
-        </div>
         <p>Find Me On</p>
         <div class="social-media">
           <a href="https://github.com/Cruebee" target="_blank"
-            ><img src="img/github_icon.svg" alt="Github"
-          /></a>
-          <a href="https://twitter.com/cruejameson" target="_blank"
-            ><img src="img/twitter_icon.svg" alt="Twitter"
-          /></a>
-          <a
-            href="https://www.linkedin.com/in/crue-jameson-a8bb0219a/"
-            target="_blank"
-            ><img src="img/linkedin_icon.svg" alt="LinkedIn"
-          /></a>
-
-          <a href="https://www.instagram.com/cruebeedoobie/" target="_blank"
-            ><img src="img/instagram_icon.svg" alt="Instagram"
-          /></a>
+          ><img src="img/github_icon.svg" alt="Github"
+        /></a>
+        <a href="https://twitter.com/cruejameson" target="_blank"
+          ><img src="img/twitter_icon.svg" alt="Twitter"
+        /></a>
+        <a
+          href="https://www.linkedin.com/in/crue-jameson-a8bb0219a/"
+          target="_blank"
+          ><img src="img/linkedin_icon.svg" alt="LinkedIn"
+        /></a>
+        <a href="https://www.instagram.com/cruebeedoobie/" target="_blank"
+          ><img src="img/instagram_icon.svg" alt="Instagram"
+        /></a>
+        <a href="https://www.medium.com/@ericcjameson" target="_blank"
+          ><img src="img/medium_icon.svg" alt="medium.com"
+        /></a>
         </div>
       </footer>
     </div>
