--- a/chatterbox_demo.html
+++ b/chatterbox_demo.html
@@ -29,7 +29,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="dist/css/styles_version2.2.css"
+      href="dist/css/styles_version2.3.css"
     />
   </head>
   <body style="background-color: #000;">
@@ -37,7 +37,7 @@
     <div class="chat-center">
       <div class="chat-demo__container">
         <video id="video1" class="video1">
-          <source src="video/ChatterBox-V2.mp4" type="video/mp4" />
+          <source src="video/ChatterBox-v2.mp4" type="video/mp4" />
         </video>
         <br />
         <button class="video-btn" onClick="playPause()">Play/Pause</button>
